# life-under-control

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  CONTEXT.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: baseline.py
apps/api/src/luc_api/finance/: __init__.py
apps/api/src/luc_api/finance/adapters/: __init__.py  attachment_repo.py  bill_repo.py  payment_repo.py  r2_attachment_store.py
apps/api/src/luc_api/finance/application/: __init__.py  attachment_repo.py  attachment_store.py  bill_repo.py  close_bill.py  create_bill.py  dashboard_attention.py  delete_bill.py  delete_payment.py  edit_bill.py  edit_payment.py  import_backfill.py  list_bills.py  month_highlights.py  month_scenario.py  payment_repo.py  prepare_attachment_upload.py  reactivate_bill.py  record_payment.py  reference_period_bars.py  register_attachment.py  remove_attachment.py  year_map.py
apps/api/src/luc_api/finance/domain/: __init__.py  attachment.py  backfill.py  bill.py  payment.py  validation.py
apps/api/src/luc_api/identity/: __init__.py
apps/api/src/luc_api/identity/adapters/: __init__.py  household_repo.py  user_repo.py
apps/api/src/luc_api/identity/application/: __init__.py  user_repo.py
apps/api/src/luc_api/whatsapp/: __init__.py
apps/api/tests/: conftest.py  test_civil_date.py  test_clock.py  test_errors.py  test_money.py
apps/api/tests/finance/adapters/: test_attachment_repo.py  test_bill_repo.py  test_payment_repo.py  test_r2_attachment_store.py
apps/api/tests/finance/application/: test_bill_lifecycle.py  test_create_bill.py  test_dashboard_attention.py  test_delete_payment.py  test_edit_payment.py  test_import_backfill.py  test_month_highlights.py  test_month_scenario.py  test_prepare_attachment_upload.py  test_record_payment.py  test_reference_period_bars.py  test_register_attachment.py  test_remove_attachment.py  test_year_map.py
apps/api/tests/finance/domain/: test_attachment.py  test_backfill.py  test_bill.py  test_payment.py
apps/api/tests/identity/adapters/: conftest.py  test_household_repo.py  test_user_repo.py
apps/api/tests/identity/application/: test_user_repo.py
apps/api/tests/identity/domain/: test_access.py  test_phone.py
apps/api/tests/support/: __init__.py  finance.py  postgres.py  whatsapp.py
apps/api/tests/whatsapp/adapters/: test_payment_proposal_repo.py  test_whatsapp_event_repo.py
apps/api/tests/whatsapp/application/: test_bill_occurrences.py  test_respond_to_proposal.py
apps/api/tests/whatsapp/domain/: test_payment_proposal.py  test_signature.py
apps/web/: .env.local  (+8 more)
(+394 files in other folders)
