[project]
name = "luc-api"
version = "0.0.0"
description = "Life Under Control backend — domain, ports/adapters and server edges (ADR-0014)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.14",
    "boto3>=1.43.49",
    "fastapi>=0.116",
    "psycopg[binary]>=3.2",
    "pyjwt>=2.10",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.12",
    "pyright>=1.1.390",
    "import-linter>=2.1",
    "boto3-stubs[s3]>=1.43.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luc_api"]

# --- panlabs bar: ruff (format + lint) ------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
# Curated set: style errors, pyflakes, imports, bugbear, comprehensions,
# pyupgrade, simplify, naming, docstrings (Google), pathlib, async, pylint,
# banned imports and ruff's own rules.
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "N",
    "D",
    "PTH",
    "ASYNC",
    "PL",
    "TID",
    "RUF",
]
ignore = [
    "E501", # line length belongs to the formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests require no docstrings and may use magic values.
"tests/**" = ["D", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- pyright strict ------------------------------------------------------
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

# --- pytest / pytest-asyncio --------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# --- import-linter: executable boundaries (ADR-0014) ---------------------
[tool.importlinter]
root_package = "luc_api"

[[tool.importlinter.contracts]]
name = "contexts follow hexagonal layers (domain < application < adapters)"
type = "layers"
layers = [
    "(adapters)",
    "application",
    "domain",
]
containers = [
    "luc_api.shared",
    "luc_api.finance",
    "luc_api.identity",
    "luc_api.whatsapp",
]

[[tool.importlinter.contracts]]
name = "whatsapp consumes financas only via the public application layer"
type = "forbidden"
source_modules = ["luc_api.whatsapp"]
forbidden_modules = ["luc_api.finance.domain"]
allow_indirect_imports = true
